I added a new list

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <!--<img src="" alt="image of Strawberry Shortcake">-->
         <li>Hi im strawberry shortcake!</li>
         <!--<img src="" alt="Image of Peppermint Fizz">-->
-        <li>Hi im peppermint fizz!</li>
+        <li>Hi im peppermint fizz!!</li>
+        <li>Hi im apple dumpling!</li>
     </ul>
 </body>
 
