I did some capitalizations to all the names

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <header>Let us introduce ourselves:</header>
     <ul>
         <!--<img src="" alt="image of Strawberry Shortcake">-->
-        <li>Hi im strawberry shortcake!</li>
+        <li>Hi im Strawberry Shortcake!</li>
         <!--<img src="" alt="Image of Peppermint Fizz">-->
-        <li>Hi im peppermint fizz!!</li>
-        <li>Hi im apple dumpling!</li>
+        <li>Hi im Peppermint Fizz!!</li>
+        <!--<img src="" alt="Image of apple dumpling"-->
+        <li>Hi im Apple Dumpling!</li>
     </ul>
 </body>
 
