Added Annie Oatmeal and commented out the image tag

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li>Hi im Peppermint Fizz!!</li>
         <!--<img src="" alt="Image of apple dumpling"-->
         <li>Hi im Apple Dumpling!</li>
+        <!--<img src="" alt="Image of Annie Oatmeal>"-->
+        <li>Hi i'm Annie Oatmeal!</li>
     </ul>
 </body>
 
