--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img src="img/banner.jpg" width="1200px" alt="Banner of a strawberry field">
     <h1 id="headline">Life is Delicious!</h1>
     <h3>
         <p>Come and meet the crew!</p>
