Updated Read me

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1 id="headline">Life is Delicious!</h1>
     <h3>
         <p>Come and meet the crew!</p>
+        <p>We're so excited to get to know you
+    </p>
     </h3>
     <header>Let us introduce ourselves:</header>
     <ul>
