added char. photos and to the todo list

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <h1 id="headline">Life is Delicious!</h1>
     <h3>
         <p>Come and meet the crew!</p>
-        <p>We're so excited to get to know you
-    </p>
+        <p>We're so excited to get to know you</p>
     </h3>
     <header>Let us introduce ourselves:</header>
     <ul>
-        <!--<img src="" alt="image of Strawberry Shortcake">-->
+        <img src="img/Strawberry_Shortcake.webp" alt="image of Strawberry Shortcake">
         <li>Hi im Strawberry Shortcake!</li>
-        <!--<img src="" alt="Image of Peppermint Fizz">-->
+        <img src="img/peppermint.png" alt="Image of Peppermint Fizz">
         <li>Hi im Peppermint Fizz!!</li>
-        <!--<img src="" alt="Image of apple dumpling"-->
+        <img src="img/apple dumplin" alt="Image of apple dumpling">
         <li>Hi im Apple Dumpling!</li>
         <!--<img src="" alt="Image of Annie Oatmeal>"-->
         <li>Hi i'm Annie Oatmeal!</li>
