added a header and footer:

--- a/index.html
+++ b/index.html
@@ -5,27 +5,44 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Ky's Final Project!</title>
+    <title>Ky's Final Project!</title>
 </head>
 
 <body>
-    <img src="img/banner.jpg" width="1200px" alt="Banner of a strawberry field">
-    <h1 id="headline">Life is Delicious!</h1>
-    <h3>
-        <p>Come and meet the crew!</p>
-        <p>We're so excited to get to know you</p>
-    </h3>
-    <header>Let us introduce ourselves:</header>
-    <ul>
-        <img src="img/Strawberry_Shortcake.webp" alt="image of Strawberry Shortcake">
-        <li>Hi im Strawberry Shortcake!</li>
-        <img src="img/peppermint.png" alt="Image of Peppermint Fizz">
-        <li>Hi im Peppermint Fizz!!</li>
-        <img src="img/apple dumplin" alt="Image of apple dumpling">
-        <li>Hi im Apple Dumpling!</li>
-        <!--<img src="" alt="Image of Annie Oatmeal>"-->
-        <li>Hi i'm Annie Oatmeal!</li>
-    </ul>
+    <header>
+        <img src="img/banner.jpg" width="1200px" alt="Banner of a strawberry field">
+        <h1 id="headline">Life is Delicious!</h1>
+        <nav>
+            <p class="underline">Come and meet the crew!</p>
+            <p class="underline">We're so excited to get to know you</p>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Let us introduce ourselves:</h2>
+        <ul>
+            <li>
+                <img src="img/Strawberry_Shortcake.webp" alt="Image of Strawberry Shortcake">
+                Hi, I'm Strawberry Shortcake!
+            </li>
+            <li>
+                <img src="img/peppermint.png" alt="Image of Peppermint Fizz">
+                Hi, I'm Peppermint Fizz!!
+            </li>
+            <li>
+                <img src="img/apple dumplin" alt="Image of Apple Dumpling">
+                Hi, I'm Apple Dumpling!
+            </li>
+            <li>
+                <!-- <img src="" alt="Image of Annie Oatmeal"> -->
+                Hi, I'm Annie Oatmeal!
+            </li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Ky's Final Project. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
