Added new images, pages and links

--- a/pages/strawberry.html
+++ b/pages/strawberry.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="strawberry.css">
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strawberry's page</title>
 </head>
+<header>
+    <nav>
+        <a href="strawberry.html">About Strawberry Shortcake</a>
+        <a href="index.html" class="Home">Home</a>
+        <a href="photos.html" class="underline"> Photo Gallery</a>
+    </nav>
+</header>
+
 <body>
     <h1>Meet Strawberry Shortcake</h1>
-    <p>Strawberry Shortcake is a kind and creative girl who lives in Strawberryland. She’s known for her delicious baking, strong friendships, and cheerful attitude.</p>
+    <p>Strawberry Shortcake is a kind and creative girl who lives in Strawberryland. She’s known for her delicious
+        baking, strong friendships, and cheerful attitude.</p>
     <h2>Where You've Seen Her</h2>
     <p>Strawberry Shortcake has been featured in various TV shows, cartoons, and movies since the 1980s.</p>
-    <img src="img/ori_straw.jpg" alt="Image of the original Strawberry Shortcake">
-    <p>Image from the original 1980's cartoon</p>
+    <img src="img/original_straw.jpg" alt="Image of the original Strawberry Shortcake">
+    <h1>Image from the original 1980's cartoon</h1>
+    <h2>Her Sweetest Friends</h2>
+    <p>Strawberry Shortcake is never alone in <a href="#home">Strawberryland!</a> She’s surrounded by lovable friends
+        like Blueberry Muffin, Raspberry Torte, and Lemon Meringue. Together, they go on magical adventures and solve
+        problems with kindness and teamwork.</p>
+
+    <h2>What She Loves to Do</h2>
+    <p>When she’s not baking berry-tastic treats, Strawberry Shortcake loves gardening, singing, and organizing berry
+        fun parties. She believes every day is better with a smile and a sprinkle of sweetness!</p>
+
+    <h2>Fun Fact!</h2>
+    <p>Did you know? The scent of the original Strawberry Shortcake dolls matched their names — Strawberry Shortcake
+        actually smelled like strawberries!</p>
+
+    <h2>Join the Berry Fun</h2>
+    <p>Stay tuned for more sweet updates, vintage collectibles, and fun activities inspired by Strawberryland!</p>
+
+    <h2>Who Created Strawberry Shortcake?</h2>
+    <p>Strawberry Shortcake was originally created in 1977 by <a
+            href="https://www.kjrh.com/news/local-news/meet-tulsa-resident-muriel-fahrion-the-creator-of-strawberry-shortcake">Muriel
+            Fahrion,</a> an illustrator working for American Greetings. What began as a simple greeting card character
+        quickly blossomed into a beloved franchise featuring dolls, cartoons, books, and more.
+        Muriel Fahrion gave Strawberry her signature look: red hair, freckles, a big bonnet, and of course, her
+        strawberry-themed dress. Fahrion also designed many of Strawberry’s friends, helping shape the colorful world of
+        Strawberryland.
+        The character's early popularity led to a successful toy line produced by Kenner and a series of animated
+        specials in the 1980s that many fans still cherish today.</p>
+    <img id="home" src="img/land.jpg" class="scalable-img" alt="Image of Strawberryland">
+    <p>Strawberryland</p>
+
 </body>
 <footer>
-    <p>Back to <a href="../index.html">Main Page</a></p>
+    <p>Back to <a href="../pages/index.html">Main Page</a></p>
 </footer>
+
 </html>
-
-
