Added images to the gallery and fixed the homepage images

--- a/photos.html
+++ b/photos.html
@@ -7,13 +7,25 @@
     <title>Photo Gallery</title>
 </head>
 <header>
-     <nav> 
-            <a href="strawberry.html">About Strawberry Shortcake</a>
-            <a href="index.html" class="Home">Home</a>
-            <a href="photos.html" class="underline"> Photo Gallery</a>
-        </nav>
+    <!-- In your HTML (already done, just add the class) -->
+<header>
+  <nav class="nav-flex">
+    <a href="index.html">Home</a>
+    <a href="strawberry.html">About Strawberry</a>
+    <a href="photos.html">Photo Gallery</a>
+  </nav>
+</header>
+
 </header>
 <body>
-    <h1>UNDER CONSTRUCTION</h1>
+<h1>Strawberry Shortcake Through the Years</h1>
+<section class="photo-gallery">
+  <img src="img/evolution.jpg" alt="Evolution of the dolls" />
+  <img src="img/doll.jpg" alt="Strawberry doll"  />
+  <img src="img/freinds.jpg" alt="Strawberry and friends" />
+  <img src="img/orange.jpg" alt="Orange Blossom"  />
+  <img src="img/modern.jpg" alt="Modern Strawberry"  />
+</section>
+
 </body>
 </html>
