--- a/strawberry.html
+++ b/strawberry.html
@@ -7,11 +7,15 @@
     <title>Strawberry's page</title>
 </head>
 <header>
-    <nav>
-        <a href="strawberry.html">About Strawberry Shortcake</a>
-        <a href="index.html" class="Home">Home</a>
-        <a href="photos.html" class="underline"> Photo Gallery</a>
-    </nav>
+   <!-- In your HTML (already done, just add the class) -->
+<header>
+  <nav class="nav-flex">
+    <a href="index.html">Home</a>
+    <a href="strawberry.html">About Strawberry</a>
+    <a href="photos.html">Photo Gallery</a>
+  </nav>
+</header>
+
 </header>
 
 <body>
@@ -20,7 +24,7 @@
         baking, strong friendships, and cheerful attitude.</p>
     <h2>Where You've Seen Her</h2>
     <p>Strawberry Shortcake has been featured in various TV shows, cartoons, and movies since the 1980s.</p>
-    <img src="img/original_straw.jpg" alt="Image of the original Strawberry Shortcake">
+    <img src="img/original_straw.jpg" alt="Image of the original Strawberry Shortcake" >
     <h1>Image from the original 1980's cartoon</h1>
     <h2>Her Sweetest Friends</h2>
     <p>Strawberry Shortcake is never alone in <a href="#home">Strawberryland!</a> She’s surrounded by lovable friends
@@ -49,7 +53,8 @@
         The character's early popularity led to a successful toy line produced by Kenner and a series of animated
         specials in the 1980s that many fans still cherish today.</p>
     <img id="home" src="img/land.jpg" class="scalable-img" alt="Image of Strawberryland">
-    <p>Strawberryland</p>
+    <div id="strawberryland"><p>Strawberryland</p></div>
+
 
 </body>
 <footer>
