I added on some of my classmates suggetions and added a new page

--- a/index.html
+++ b/index.html
@@ -3,56 +3,56 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Savate&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ky's Final Project!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
     <header>
         <img src="img/ban.webp" width="1600px" alt="Banner of a strawberry field">
-        <h1 id="headline">Life is Delicious!</h1>
-        <!-- In your HTML (already done, just add the class) -->
-        <header>
-            <nav class="nav-flex">
-                <a href="index.html">Home</a>
-                <a href="strawberry.html">About Strawberry</a>
-                <a href="photos.html">Photo Gallery</a>
-            </nav>
-        </header>
+        <h1 id="headline">Life is Delicious!</h1><i class="fas fa-star"></i>   <!-- Solid star -->
 
-        <p class="underline"> We're so excited to get to know you! Let us introduce ourselves:</p>
+        <!-- Navigation bar -->
+        <nav class="nav-flex">
+            <a href="index.html">Home</a>
+            <a href="strawberry.html">About Strawberry</a>
+            <a href="photos.html">Photo Gallery</a>
+            <a href="recipes.html">Recipes</a>
+        </nav>
 
-
-
-
+        <!-- Introductory paragraph -->
+        <p class="underline">We're so excited to get to know you! Let us introduce ourselves:</p>
+    
     </header>
+
     <main>
-            <section>
-                <h2>Meet the Sweethearts of Strawberryland</h2>
+        <section>
+            <h2>Meet the Sweethearts of Strawberryland</h2>
 
-                <div class="clearfix">
-                    <img src="img/Strawberry_Shortcake.webp" alt="Image of Strawberry Shortcake" class="img-left">
-                    <p><strong>Strawberry Shortcake:</strong> A cheerful leader who loves baking and making new friends.
-                    </p>
-                </div>
+            <div class="clearfix">
+                <img src="img/Strawberry_Shortcake.webp" alt="Image of Strawberry Shortcake" class="img-left">
+                <p><strong>Strawberry Shortcake:</strong> A cheerful leader who loves baking and making new friends.</p>
+            </div>
 
-                <div class="clearfix">
-                    <img src="img/peppermint fizz.jpg" alt="Image of Peppermint Fizz" class="img-left">
-                    <p><strong>Peppermint Fizz:</strong> A competitive cutie who always wants to be the best — but with
-                        heart.</p>
-                </div>
+            <div class="clearfix">
+                <img src="img/peppermint fizz.jpg" alt="Image of Peppermint Fizz" class="img-left">
+                <p><strong>Peppermint Fizz:</strong> A competitive cutie who always wants to be the best — but with heart.</p>
+            </div>
 
-                <div class="clearfix">
-                    <img src="img/dumplin.jpg" alt="Image of Apple Dumpling" class="img-left">
-                    <p><strong>Apple Dumpling:</strong> The littlest sweetheart who sees magic in everything!</p>
-                </div>
+            <div class="clearfix">
+                <img src="img/dumplin.jpg" alt="Image of Apple Dumpling" class="img-left">
+                <p><strong>Apple Dumpling:</strong> The littlest sweetheart who sees magic in everything!</p>
+            </div>
 
-                <div class="clearfix">
-                    <img src="img/annie.jpg" width="300px" alt="Image of Annie Oatmeal" class="img-left">
-                    <p><strong>Annie Oatmeal:</strong> A sporty gal who loves animals and outdoor fun.</p>
-                </div>
-            </section>
+            <div class="clearfix">
+                <img src="img/annie.jpg" width="300px" alt="Image of Annie Oatmeal" class="img-left">
+                <p><strong>Annie Oatmeal:</strong> A sporty gal who loves animals and outdoor fun.</p>
+            </div>
+        </section>
 
         <section>
             <h2>Did You Know?</h2>
@@ -60,7 +60,6 @@
             <p>🍬 Peppermint Fizz is known for her love of sports and peppermint-scented style.</p>
             <p>👶 Apple Dumpling often speaks in rhyme — she's too cute to handle!</p>
         </section>
-    
     </main>
 
     <footer>
