--- a/photos.html
+++ b/photos.html
@@ -13,6 +13,7 @@
     <a href="index.html">Home</a>
     <a href="strawberry.html">About Strawberry</a>
     <a href="photos.html">Photo Gallery</a>
+    <a href="recipes.html">Recipes</a>
   </nav>
 </header>
 
