--- a/photos.html
+++ b/photos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
+    <link href="https://fonts.googleapis.com/css2?family=Savate&display=swap" rel="stylesheet">
 </head>
 <header>
     <!-- In your HTML (already done, just add the class) -->
